--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,15 +1,15 @@
 {
   "name": "antaminav2",
-  "app_id": "3e5dea26",
-  "type": "ionic1",
   "integrations": {
     "gulp": {},
     "cordova": {}
   },
+  "type": "ionic1",
   "watchPatterns": [
     "scss/**/*",
     "www/**/*",
     "!www/lib/**/*",
     "!www/**/*.map"
-  ]
+  ],
+  "pro_id": "3e5dea26"
 }
