--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "ionic-team/ionic-bower#1.3.4"
   },
   "dependencies": {
-    "angular-localforage": "^1.3.8"
+    "angular-localforage": "^1.3.8",
+    "ion-floating-menu": "^1.0.6"
   }
 }
